# hybridoctree

./: CMakeLists.txt  HexGen.cpp  LICENSE  README.md  Stl.cpp
inputs/: gen_sphere.py  model.raw  model.stl
src/: HexGen.h  Initialization.h  Main.cpp  Stl.h
